--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Frontend Starter preact</title>
-    <meta name="description" content="Frontend Starter example" />
+    <title>Crosscaster</title>
+    <meta
+      name="description"
+      content="Cast to Farcaster from your Twitter profile"
+    />
   </head>
-  <body class="bg-black-background">
+  <body class="bg-black">
     <noscript>Please, turn on JavaScript to see this page.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
