--- a/index.html
+++ b/index.html
@@ -8,8 +8,36 @@
       name="description"
       content="Cast to Farcaster from your Twitter profile"
     />
+    <!-- Favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="/favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <link rel="shortcut icon" href="/favicon/favicon.ico" />
+    <meta name="msapplication-TileColor" content="#603cba" />
+    <meta name="msapplication-config" content="/favicon/browserconfig.xml" />
+    <meta name="theme-color" content="#603cba" />
   </head>
-  <body class="bg-black">
+  <body class="bg-purple-900">
     <noscript>Please, turn on JavaScript to see this page.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
